--- a/sanity-and-shopify/package.json
+++ b/sanity-and-shopify/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1",
     "sanity": "^4.9.0",
     "sanity-plugin-hotspot-array": "^1.0.1",
+    "sanity-plugin-link-field": "^1.4.1",
     "sanity-plugin-media": "^2.0.5",
     "slug": "^8.2.2",
     "styled-components": "^6.1.18"
